--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       - checkout
       - run: go get -v -t -d ./...
       - run: mkdir /tmp/coverage
-      - run: go test -race -v ./... -coverprofile=/tmp/coverage/c.out
+      - run: go test -v ./... -coverprofile=/tmp/coverage/c.out
       - run: go tool cover -html=/tmp/coverage/c.out -o /tmp/coverage/c.html
       - store_artifacts:
           path: /tmp/coverage
